seccion configuraciones terminado

--- a/admin/css/estilos.css
+++ b/admin/css/estilos.css
@@ -79,6 +79,7 @@ body {
     padding: .8em 0;
     border: none;
     border-radius: .5em;
+    cursor: pointer;
 }
 .form-line{
     position: absolute;
